<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AB8CC1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        android:padding="8dp"
        app:srcCompat="@drawable/_1208505_1410176832520556_5495269849024167936_n" />

    <TextView
        android:id="@+id/dazikiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dazikiri_anikar"
        style="@style/nameStyle" />

    <EditText
        android:id="@+id/enterHobbies"
        style="@style/generalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hobby_hint"
        android:inputType="textPersonName"
        android:autofillHints="@string/auto_fill_hints" />

    <Button
        android:id="@+id/done_button"
        style="@style/generalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addHobbies"
        android:text="@string/hobbies_proceed" />

    <TextView
        android:id="@+id/hobbiesText"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/generalStyle"
            android:fontFamily="@font/aclonica"
            android:text="@string/dazikiri_bio"
            tools:ignore="TextContrastCheck" />
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>